--- a/index.html
+++ b/index.html
@@ -140,91 +140,37 @@
     <!-- This section contains the reviews/testimonials -->
     <section>
 
-      <figure class="snip1574">
-        <img src="images/reviews-1.jpg" alt="Profile 1">
+      <figure class="review">
+        <img src="images/reviews-1.jpg" loading="lazy" alt="Profile 1">
         <figcaption>
           <blockquote>
-            <p>Mama Kazaliwa reminds me that we are not meant to journey motherhood alone</p>
+          <p>We are not meant to journey motherhood alone, and I am glad Mama Kazaliwa continues to support moms like me. It is okay to lean in to support, to ask for help.</p>
             <h3>Nanjala A.</h3>
           </blockquote>
         </figcaption>
       </figure>
 
-      <figure class="snip1574">
-        <img src="images/reviews-2.jpg" alt="Profile 2">
+      <figure class="review">
+        <img src="images/reviews-2.jpg" loading="lazy" alt="Profile 2">
         <figcaption>
           <blockquote>
-            <p>Gladys reminds me so often that when a baby is born, so is a mother.</p>
+            <p>Gladys reminds me so often that when a baby is born, so is a mother. The same way we tend to the newborn, so should it be for the postpartum momma</p>
             <h3>Purity K.</h3>
           </blockquote>
         </figcaption>
       </figure>
 
-      <figure class="snip1574">
-        <img src="images/reviews-3.jpg" alt="Profile 3">
+      <figure class="review">
+        <img src="images/reviews-3.jpg" loading="lazy" alt="Profile 3">
         <figcaption>
           <blockquote>
-            <p>No one told me that the transition to motherhood is called matrescence - like adolescence.</p>
+            <p>No one told me that the transition to motherhood is called matrescence - like adolescence. This is something more moms need to hear!</p>
             <h3>Belinda S.</h3>
           </blockquote>
         </figcaption>
       </figure>
-
-
-      <figure class="review">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample40.jpg" alt="profile-sample2" />
-        <figcaption>
-          <blockquote>
-            <p>Which is worse, that everyone has his price, or that the price is always so low.</p>
-          </blockquote>
-          <h3>Sue Shei</h3>
-          <h5>Founder</h5>
-        </figcaption>
-      </figure>
-
-      <figure class="review">
-        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample37.jpg" alt="profile-sample7" />
-        <figcaption>
-          <blockquote>
-            <p>I'm killing time while I wait for life to shower me with meaning and happiness.</p>
-          </blockquote>
-          <h3>Wambiryanga</h3>
-          <h5>Founder</h5>
-        </figcaption>
-      </figure>
-
-      <figure class="review"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sq-sample35.jpg" alt="profile-sample6" />
-        <figcaption>
-          <blockquote>
-            <p>The only skills I have the patience to learn are those that have no real application in life. </p>
-          </blockquote>
-          <h3>Indigo Violet</h3>
-          <h5>Public Relations</h5>
-        </figcaption>
-      </figure>
     </section>
-
-
-
-    
-
   </div>
-
-
-  
-
-
-
-
-
-
-
-
-
-
-
- 
-
 
   <script src="app.js"></script>
 </body>
