--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <span>&#8901</span>
         <a href="">Matrescence</a>
         <span>&#8901</span>
-        <a href="">How it works</a>
+        <a href="">Blog</a>
         <span>&#8901</span>
         <a href="">Contact</a>
       </nav>
@@ -100,7 +100,7 @@
   </section>
 
   <!-- This is the main section that provides context for Mama Kazaliwa -->
-  <div class="container">
+  <div class="container main-container">
     <main pt-2>
       <h2>No Mama is Left Behind</h2>
       <p>There is a word for the changes that one goes through in transitioning to motherhood. That word is
@@ -135,11 +135,29 @@
         <a href="#" class="read-more">Read More</a></p>
       </div>     
     </section>
-    <hr>
+  </div>
+
+  <section id="facts">
+    <p><span id="facts-intro"><em>DID YOU KNOW...</em></span><br>
+      <span id="facts-stats">1 in 5 Women in Kenya Will Experience A Mental Health Illness During Pregnancy and/or Postpartum?</span></p>
+  </section>
+  
+<div class="container">
+  <!-- This section contains some info on matrescence and allows one to get support -->
+<section id="get-support">
+  <div id="get-support-text">
+    <h2>Mama Kazaliwa Community</h2>
+    <p><em>Motherhood is natural, not automatic.</em><br>
+    Motherhood looks different for each and every mom. Mama Kazaliwa is here to support women during this transition. Simply put, Matrescence is the process of becoming a mother, and it embodies the significant physical, emotional and psychological changes. Mama Kazaliwa is here to support you as you navigate this identity change, meeting you where you are with grace and kindness.</p>
+    <button class="btn" id="btn-get-support" type="submit">Get Support</button>
+  </div>
+  
+<img src="images/get-support.jpg" alt="">
+
+</section>
 
     <!-- This section contains the reviews/testimonials -->
-    <section>
-
+    <section id="review-container">
       <figure class="review">
         <img src="images/reviews-1.jpg" loading="lazy" alt="Profile 1">
         <figcaption>
@@ -170,7 +188,38 @@
         </figcaption>
       </figure>
     </section>
+</div>
+
+<footer>
+  <div id="footer-mama-kazaliwa">
+    <img src="images/mama-kazaliwa-logo.jpg" alt="Mama Kazaliwa Logo">
+    <h2>Supporting You Through Motherhood</h2>
+    <a href="https://www.instagram.com/mama_kazaliwa/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+    <a href="" target="_blank"><i class="fa-light fa-envelope"></i></a>
   </div>
+
+  <div id="explore">
+   <h4 id="explore">
+    <p>Mama Kazaliwa Community</p>
+    <p>Shop our Affirmation Cards</p>
+    <p>Events</p>
+   </h4>
+  </div>
+
+  <div id="about-us">
+    <p>Our Story</p>
+    <p>Mama Rising Program</p>
+    <p>CSR- Period Project</p>
+  </div>
+
+  <div id="help">
+    <p>FAQ</p>
+    <p>Contact Us</p>
+  </div>
+
+</footer>
+
+
 
   <script src="app.js"></script>
 </body>
