Optimize images to reduce slow loading. One image was 7MB! smh

--- a/index.html
+++ b/index.html
@@ -22,39 +22,46 @@
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
   <link rel="stylesheet" href="style.css">
-  <title>Mama Kazliwa</title>
+  <title>Mama Kazaliwa</title>
 </head>
 
 <body>
 
   <header>
     <section id="left">
-
       <div class="container">
         <div id="logo">
           <img src="images/mama-kazaliwa-logo.jpg" alt="Mama Kazaliwa Logo">
         </div>
-        <h1 class="title">When one <br> mama rises, we all rise.</h1>
-        <p>Being a (Kenyan) mom is hard and at Mama Kazaliwa we acknowledge that. While motherhood is natural, it
-          changes every part of a woman's being - and it often feels unrelenting.
-          <!-- On the hard days, dear mama, remember
+
+        <div id="logo-text">
+          <h1 class="title">When one <br> mama rises, we all rise.</h1>
+          <p>Being a (Kenyan) mom is hard and at Mama Kazaliwa we acknowledge that. While motherhood is natural, it
+            changes every part of a woman's being - and it often feels unrelenting.
+            <!-- On the hard days, dear mama, remember
           it is not your fault. You are deserving of the care and attention you freely give others.  -->
-          Mama Kazaliwa is a
-          community that supports mothers with resources to help them become more conscious of their motherhood journey.
-        </p>
+            Mama Kazaliwa is a
+            community that supports mothers with resources to help them become more conscious of their motherhood
+            journey.
+          </p>
 
-        <div id="learn-more">
-          <button class="btn" id="btn-schedule" type="submit">Schedule a session</button>
-          <button class="btn" id="btn-works" type="submit"><i class="fa-solid fa-circle-play"></i> How it works</button>
-        </div>
+          <div id="learn-more-div">
+            <button class="learn-more btn" id="btn-schedule" type="submit">
+              <span class="circle" aria-hidden="true">
+              <span class="icon arrow"></span>
+              </span>
+              <span class="button-text"> Join The Community</span>
+            </button>
+          </div>
 
-        <div id="socials" class="pb-4">
-          <a href="https://www.instagram.com/mama_kazaliwa/" target="_blank">Instagram</a>
-          <span>&#8901</span>
-          <a href="https://www.instagram.com/motherhood_unscripted/" target="_blank">Motherhood Unscripted</a>
-          <span>&#8901</span>
-          <a href="https://www.amytaylorkabbaz.com/captivate-podcast/the-potential-of-empowered-mothers-with-mr-facilitator-gladys-kangau/"
-            target="_blank">Listen In</a>
+          <div id="socials" class="pb-4">
+            <a href="https://www.instagram.com/mama_kazaliwa/" target="_blank">Instagram</a>
+            <span>&#8901</span>
+            <a href="https://www.instagram.com/motherhood_unscripted/" target="_blank">Motherhood Unscripted</a>
+            <span>&#8901</span>
+            <a href="https://www.amytaylorkabbaz.com/captivate-podcast/the-potential-of-empowered-mothers-with-mr-facilitator-gladys-kangau/"
+              target="_blank">Listen In</a>
+          </div>
         </div>
       </div>
     </section>
@@ -101,11 +108,12 @@
 
   <!-- This is the main section that provides context for Mama Kazaliwa -->
   <div class="container main-container">
-    <main pt-2>
+    <main>
       <h2>No Mama is Left Behind</h2>
       <p>There is a word for the changes that one goes through in transitioning to motherhood. That word is
         <em>matrescence</em>. When a baby is born, so is a mother. Come along with us, let us share in this beautiful
-        journey together.</p>
+        journey.
+      </p>
 
 
       <div id="main-div">
@@ -123,38 +131,58 @@
         </div>
       </div>
     </main>
-    <hr>
-    
 
     <!-- This is an 'About-us' section -->
     <section id="about-us">
+
       <img src="images/main-about-us.webp" loading="lazy" alt="">
       <div id="about-text">
         <h2>Journey to Matrescence...</h2>
-        <p>I remember vividly when I discovered I was pregnant in 2016. I had mixed feelings of extremely scared but yes very excited about what the new chapter in my life would hold. I was always looking forward to the day I would become a mother. I still remember vividly the day my daughter came, I was so scared of how my body would handle the pain and soon after that my reality came in. I was struggling and all these big feelings started trickling in. <br> Shame, guilt, doubt and I felt like I could not find a way to express what it was I was feeling. It was beautiful, don't get me wrong to watch the creation that was once in my body in my arms but there was something missing and I did not know what it was yet. When I found out about matrescence, It was like the <em>aha!</em> moment where everything began to make sense, I could finally begin to understand what a mother goes through and that a mother is born and experiences similar changes just like the baby. I wasn't crazy after all and this led me to a series of reaching out to other moms and sharing my own naked truths. <br><br>
-        <a href="#" class="read-more">Read More</a></p>
-      </div>     
+        <p>I remember vividly when I discovered I was pregnant in 2016. I had mixed feelings of extremely scared but yes
+          very excited about what the new chapter in my life would hold. I was always looking forward to the day I would
+          become a mother. I still remember vividly the day my daughter came, I was so scared of how my body would
+          handle the pain and soon after that my reality came in. I was struggling and all these big feelings started
+          trickling in. <br> Shame, guilt, doubt and I felt like I could not find a way to express what it was I was
+          feeling. It was beautiful, don't get me wrong to watch the creation that was once in my body in my arms but
+          there was something missing and I did not know what it was yet. When I found out about matrescence, It was
+          like the <em>aha!</em> moment where everything began to make sense, I could finally begin to understand what a
+          mother goes through and that a mother is born and experiences similar changes just like the baby. I wasn't
+          crazy after all and this led me to a series of reaching out to other moms and sharing my own naked truths.
+          <br><br>
+          <a href="#" class="read-more">Read More</a>
+        </p>
+      </div>
     </section>
   </div>
 
   <section id="facts">
     <p><span id="facts-intro"><em>DID YOU KNOW...</em></span><br>
-      <span id="facts-stats">1 in 5 Women in Kenya Will Experience A Mental Health Illness During Pregnancy and/or Postpartum?</span></p>
+      <span id="facts-stats">1 in 5 Women in Kenya Will Experience A Mental Health Illness During Pregnancy and/or
+        Postpartum?</span>
+    </p>
   </section>
-  
-<div class="container">
-  <!-- This section contains some info on matrescence and allows one to get support -->
-<section id="get-support">
-  <div id="get-support-text">
-    <h2>Mama Kazaliwa Community</h2>
-    <p><em>Motherhood is natural, not automatic.</em><br>
-    Motherhood looks different for each and every mom. Mama Kazaliwa is here to support women during this transition. Simply put, Matrescence is the process of becoming a mother, and it embodies the significant physical, emotional and psychological changes. Mama Kazaliwa is here to support you as you navigate this identity change, meeting you where you are with grace and kindness.</p>
-    <button class="btn" id="btn-get-support" type="submit">Get Support</button>
-  </div>
-  
-<img src="images/get-support.jpg" alt="">
 
-</section>
+  <div class="container">
+    <!-- This section contains some info on matrescence and allows one to get support -->
+    <section id="get-support">
+      <div id="get-support-text">
+        <h2>Mama Kazaliwa Community</h2>
+        <p><em>Motherhood is natural, not automatic.</em><br>
+          Motherhood looks different for each and every mom. Mama Kazaliwa is here to support women during this
+          transition. Simply put, Matrescence is the process of becoming a mother, and it embodies the significant
+          physical, emotional and psychological changes. Mama Kazaliwa is here to support you as you navigate this
+          identity change, meeting you where you are with grace and kindness.</p>
+          <button class="learn-more btn" id="btn-get-support" type="submit">
+            <span class="circle" aria-hidden="true">
+            <span class="icon arrow"></span>
+            </span>
+            <span class="button-text">Get Support today</span>
+          </button>
+      </div>
+
+      <img src="images/get-support.jpg" alt="">
+
+    </section>
 
     <!-- This section contains the reviews/testimonials -->
     <section id="review-container">
@@ -162,7 +190,8 @@
         <img src="images/reviews-1.jpg" loading="lazy" alt="Profile 1">
         <figcaption>
           <blockquote>
-          <p>We are not meant to journey motherhood alone, and I am glad Mama Kazaliwa continues to support moms like me. It is okay to lean in to support, to ask for help.</p>
+            <p>We are not meant to journey motherhood alone, and I am glad Mama Kazaliwa continues to support moms like
+              me. It is okay to lean in to support, to ask for help.</p>
             <h3>Nanjala A.</h3>
           </blockquote>
         </figcaption>
@@ -172,7 +201,8 @@
         <img src="images/reviews-2.jpg" loading="lazy" alt="Profile 2">
         <figcaption>
           <blockquote>
-            <p>Gladys reminds me so often that when a baby is born, so is a mother. The same way we tend to the newborn, so should it be for the postpartum momma</p>
+            <p>Gladys reminds me so often that when a baby is born, so is a mother. The same way we tend to the newborn,
+              so should it be for the postpartum momma</p>
             <h3>Purity K.</h3>
           </blockquote>
         </figcaption>
@@ -182,42 +212,61 @@
         <img src="images/reviews-3.jpg" loading="lazy" alt="Profile 3">
         <figcaption>
           <blockquote>
-            <p>No one told me that the transition to motherhood is called matrescence - like adolescence. This is something more moms need to hear!</p>
+            <p>No one told me that the transition to motherhood is called matrescence - like adolescence. This is
+              something more moms need to hear!</p>
             <h3>Belinda S.</h3>
           </blockquote>
         </figcaption>
       </figure>
     </section>
-</div>
-
-<footer>
-  <div id="footer-mama-kazaliwa">
-    <img src="images/mama-kazaliwa-logo.jpg" alt="Mama Kazaliwa Logo">
-    <h2>Supporting You Through Motherhood</h2>
-    <a href="https://www.instagram.com/mama_kazaliwa/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-    <a href="" target="_blank"><i class="fa-light fa-envelope"></i></a>
   </div>
 
-  <div id="explore">
-   <h4 id="explore">
-    <p>Mama Kazaliwa Community</p>
-    <p>Shop our Affirmation Cards</p>
-    <p>Events</p>
-   </h4>
-  </div>
+  <footer>
+    <div id="footer">
+      <div id="footer-mama-kazaliwa">
+        <img src="images/mama-kazaliwa-logo-footer.png" alt="Mama Kazaliwa Logo">
+        <h2>Supporting You <br> Through Motherhood</h2>
+        <div id="footer-socials">
+          <a href="https://www.instagram.com/mama_kazaliwa/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="" target="_blank"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+      </div>
+  
+      <div id="explore">
+        <h4><strong>Explore</strong></h4>
+        <p>Mama Kazaliwa Community</p>
+        <p>Shop our Affirmation Cards</p>
+        <p>Events</p>
+      </div>
+  
+      <div id="footer-about">
+        <h4><strong>About</strong></h4>
+        <p>Our Story</p>
+        <p>Mama Rising Program</p>
+        <p>CSR - Period Project</p>
+      </div>
+  
+      <div id="help">
+        <h4><strong>Help</strong></h4>
+        <p>FAQs</p>
+        <p>Get in Touch!</p>
+      </div>  
+    </div>
 
-  <div id="about-us">
-    <p>Our Story</p>
-    <p>Mama Rising Program</p>
-    <p>CSR- Period Project</p>
-  </div>
+    <div id="footer-details">
+      <div id="footer-details-left">
+        <p>&copy MAMA KAZALIWA 2022</p>
+        <span>&#8901</span>
+        <p>PRIVACY POLICY</p>
+        <span>&#8901</span>
+        <p>DISCLAIMER</p>
+      </div>
 
-  <div id="help">
-    <p>FAQ</p>
-    <p>Contact Us</p>
-  </div>
-
-</footer>
+      <div id="footer-details-right">
+      <p>SITE BY Samoina</p>
+      </div>
+    </div>
+  </footer>
 
 
 
